120_kubernetes/kyverno/busybox-privileged.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-privileged
  namespace: test
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - "1000000"
    securityContext:
      allowPrivilegeEscalation: true
