120_kubernetes/kyverno/cosign.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: check-image
    match:
      any:
      - resources:
          kinds:
          - Pod
    verifyImages:
    - imageReferences:
      - "gcr.io/projectsigstore/*"
      attestors:
      - count: 1
        entries:
        - keyless:
            rekor:
              url: https://rekor.sigstore.dev
            issuer: https://accounts.google.com
            subject: keyless@projectsigstore.iam.gserviceaccount.com
